--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@notionhq/client": "^0.2.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
