--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.2.3",
-    "framer-motion": "^4.1.17",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "swr": "^0.5.6"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
