--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@notionhq/client": "^0.2.3",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.3.1",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.0.1",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.7"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "^11.1.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.3.1",
+		"eslint": "^7.31.0",
+		"eslint-config-next": "^11.0.1",
+		"postcss": "^8.3.6",
+		"tailwindcss": "^2.2.7"
+	}
 }
