--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"next": "^11.1.2",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"next": "^13.4.7",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.3.1",
-		"eslint": "^7.31.0",
-		"eslint-config-next": "^11.0.1",
-		"postcss": "^8.3.6",
-		"tailwindcss": "^2.2.7"
+		"@types/node": "20.3.2",
+		"@types/react": "18.2.14",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.43.0",
+		"eslint-config-next": "^13.4.7",
+		"postcss": "^8.4.24",
+		"tailwindcss": "^3.3.2",
+		"typescript": "^5.1.3"
 	}
 }
