--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@keystatic/core": "^0.0.107",
-		"@keystatic/next": "^0.0.11",
-		"next": "^13.4.7",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"zod": "^3.21.4"
-	},
-	"devDependencies": {
-		"@types/node": "20.3.2",
-		"@types/react": "18.2.14",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.43.0",
-		"eslint-config-next": "^13.4.7",
-		"postcss": "^8.4.24",
-		"tailwindcss": "^3.3.2",
-		"typescript": "^5.1.3"
-	}
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "keystatic:playground": "tsx content/playground.ts"
+  },
+  "dependencies": {
+    "@keystatic/core": "^0.0.107",
+    "@keystatic/next": "^0.0.11",
+    "next": "^13.4.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/node": "20.3.2",
+    "@types/react": "18.2.14",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.3"
+  }
 }
