--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ts-pattern": "^5.0.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
